# Varys

./: .gitignore  .pre-commit-config.yaml  README.md  acknolwedgement.md  exceptions.py  logger.py  main.py  pyproject.toml
.github/workflows/: lint.yml
argument_parser/: parser.py
config/: default.txt  test_group.txt
domain/: objects.py
network_request/: request.py
output/: json_file_write.py
parsers/: __init__.py  arguments.py  headers.py  html.py
