[tool.poetry]
name = "varys"
version = "0.1.0"
description = ""
authors = ["garrett-vangilder <garrett.vangilder@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
