[tool.poetry]
name = "varys"
version = "0.1.0"
description = ""
authors = ["garrett-vangilder <garrett.vangilder@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
black = {extras = ["d"], version = "^22.10.0"}
pylint = "^2.15.6"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
